overflow fix for ios devices

--- a/public/stylesheets/sm-style.css
+++ b/public/stylesheets/sm-style.css
@@ -12,6 +12,7 @@ html, body {
   margin: 0;
   padding: 0;
   z-index: 0;
+  overflow: hidden;
 }
 .makeamovie .header {
   font-size: 2em;
@@ -452,7 +453,7 @@ h1,h2,h3 {
   position: relative;
   width: 100%;
   z-index: 1;
-  top: -60px;
+  top: -160px;
   font-size: 25px;
 }
 
@@ -595,7 +596,7 @@ h1,h2,h3 {
   }
 
   #movieTitle {
-    top: -60px;
-    font-size: 160%;
+    top: -230px;
+    font-size: 80%;
   }
 }
